Website fix fow overlapping text

--- a/static/css/appsoc.css
+++ b/static/css/appsoc.css
@@ -16,10 +16,12 @@ font-size: 15px;
   font-weight: lighter;
 }
 
-.trans_view{
+.appsoc_trans_view{
   background-color: rgba(0,0,0,0.5);
   color:white;
-  height:100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .appsoc_container{
@@ -83,11 +85,14 @@ font-weight: lighter;
 
 .events{
   background-color: black;
-  background-image: url('/static/images/android.jpg');
+  background: url('/static/images/android.jpg') center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  background-size:  100%;
- 
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  
 }
 
 button{
